--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,158 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+p {
+  font-weight: 300;
+}
+
+.navbar {
+  height: 55px;
+}
+
+.navbar:after {
+  content: "";
+  display: block;
+  margin: 0 42px 0 180px;
+  width: 90%;
+  position: absolute;
+  top: 54px;
+  right: 15px;
+  border-bottom: 1px solid rgb(218, 220, 224);
+}
+
+.sidenav {
+  height: 100%;
+  width: 156px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(57, 58, 61);
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.searchicon {
+  width: 18px;
+  height: 18px;
+}
+
+.navbutton {
+  width: 112px;
+  height: 44px;
+  font-weight: 300;
+  font-size: 13px;
+}
+
+.navbutton:hover {
+  border: 1px solid rgb(215, 218, 221);
+}
+
+.navbutton:focus {
+  box-shadow: 0 0 0 0.1rem black;
+}
+
+.dot {
+  height: 50px;
+  width: 50px;
+  background-color: rgb(213, 43, 30);
+  border-radius: 50%;
+  display: block;
+  margin: 12px auto 0 auto;
+}
+
+.welcome-back {
+  margin-top: 35px;
+}
+
+.savings {
+  margin-top: 35px;
+}
+
+.dollardollar {
+  color: rgb(107, 108, 114);
+  font-size: 80px;
+}
+
+.dollardollarlabel {
+  display: inline-block;
+  position: absolute;
+  margin-top: 15px;
+  margin-left: 15px;
+  font-weight: 300;
+  font-size: 14px;
+  max-width: 80px;
+}
+
+.bannerlogo {
+  background-color: white;
+  width: 100%;
+  height: 60px;
+  margin-top: 32px;
+}
+
+.namelogo {
+  margin-left: 22px;
+  font-weight: 700;
+}
+
+.dotsmall {
+  height: 20px;
+  width: 20px;
+  background-color: rgb(213, 43, 30);
+  border-radius: 50%;
+  display: inline-block;
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+.blackspace {
+  height: 96px;
+  background-color: black;
+}
+
+.greendot {
+  height: 20px;
+  width: 20px;
+  background-color: rgb(0, 134, 0);
+  border-radius: 50%;
+  display: inline-block;
+  margin-top: 20px;
+  margin-left: 12px;
+}
+
+.affiliatelogo {
+  margin-left: 25px;
+  font-weight: 400;
+  font-size: 15px;
+  color: rgb(211, 211, 211);
+  white-space: nowrap;
+}
+
+.bluedot {
+  height: 20px;
+  width: 20px;
+  background-color: rgb(0, 205, 169);
+  border-radius: 50%;
+  display: inline-block;
+  margin-top: 20px;
+  margin-left: 12px;
+}
+
+.affiliate {
+  padding-bottom: 20px;
+}
+
+.affiliate:hover {
+  cursor: pointer;
+  background-color: rgb(107, 108, 114);
 }
