--- a/src/index.css
+++ b/src/index.css
@@ -156,3 +156,23 @@ p {
   cursor: pointer;
   background-color: rgb(107, 108, 114);
 }
+
+.sidenav-footer {
+  width: 100%;
+  bottom: 10px;
+  position: absolute;
+  color: white;
+  font-size: 12px;
+  font-weight: 100px;
+}
+
+.footerbtn {
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+}
+
+.footerbtn:hover {
+  cursor: pointer;
+  background-color: rgb(107, 108, 114);
+}
