--- a/src/index.css
+++ b/src/index.css
@@ -270,8 +270,13 @@ p {
   background-color: white;
   height: 175px;
   width: 165px;
-  box-shadow: 0px 0px 5px #b3b3b3;
+  box-shadow: 0px 0px 7px #b3b3b3;
   border-radius: 12px;
+  margin-right: 22px;
+}
+
+.btn-finance:hover {
+  box-shadow: 0px 0px 14px #b3b3b3;
 }
 
 .btnFinIcon {
