--- a/src/index.css
+++ b/src/index.css
@@ -263,7 +263,7 @@ p {
   margin-top: 20px;
   font-weight: 400;
   font-size: 22px;
-  color: rgb(115, 115, 115);
+  color: rgb(135, 136, 137);
 }
 
 .btn-finance {
@@ -296,4 +296,31 @@ p {
   font-size: 14px;
   font-weight: 500;
   color: rgb(80, 80, 80);
+}
+
+.bottomtext {
+  font-weight: 500;
+  color: rgb(135, 136, 137);
+}
+
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding: 10px;
+}
+
+table.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+td {
+  width: 200px;
+}
+
+th {
+  width: 200px;
+  font-size: 20px;
 }
