--- a/src/index.css
+++ b/src/index.css
@@ -427,8 +427,8 @@ th {
 }
 
 .maintext {
-  font-size: 14px;
-  line-height: 24px;
+  font-size: 15.5px;
+  line-height: 30px;
 }
 
 .boldtext {
@@ -453,4 +453,10 @@ th {
   padding-top: 10px;
   padding-left: 0px;
   padding-right: 0px;
+}
+
+.subtext {
+  font-size: 14px;
+  font-weight: 400;
+  color: rgb(120, 120, 120);
 }
