--- a/src/index.css
+++ b/src/index.css
@@ -543,3 +543,9 @@ th {
   padding-right: 36px;
   border: 1.5px solid rgb(230, 239, 241);
 }
+
+.completed {
+  font-size: 16px;
+  font-weight: 500;
+  color: rgb(74, 91, 97);
+}
