--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,14 @@ p {
   margin-top: 35px;
 }
 
+.taxbreak {
+  margin-top: 50px;
+  padding-left: 10%;
+  padding-right: 10%;
+  line-height: 55px;
+  /* font-weight: 600; */
+}
+
 .mainpagewelcome {
   margin-top: 35px;
   font-weight: 700;
@@ -207,6 +215,13 @@ p {
   margin-top: -73px;
 }
 
+.dollaricon {
+  font-size: 30px;
+  font-weight: 500;
+  color: white;
+  margin-top: -47px;
+}
+
 .subsetIconCircle {
   height: 50px;
   width: 50px;
@@ -216,12 +231,46 @@ p {
   margin: -36px auto 0 auto;
 }
 
+.subsetIconCircleGreen {
+  height: 50px;
+  width: 50px;
+  background-color: rgb(87, 191, 121);
+  border-radius: 50%;
+  display: block;
+  margin: -36px auto 0 auto;
+}
+
+.dollardollargreen {
+  color: rgb(64, 184, 104);
+  font-size: 80px;
+}
+
 .lightblue {
   /* display: block; */
   margin-left: auto;
   margin-right: auto;
   background-color: rgb(244, 252, 255);
   max-width: 1000px;
+  padding-top: 10px;
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+.lightblue-border {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgb(244, 252, 255);
+  max-width: 1000px;
+  padding-top: 10px;
+  padding-left: 36px;
+  padding-right: 36px;
+  border: 1.5px solid rgb(230, 239, 241);
+}
+
+.lightgreen {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgb(237, 250, 239);
   padding-top: 10px;
   padding-left: 36px;
   padding-right: 36px;
@@ -324,6 +373,41 @@ p {
   box-shadow: 0px 0px 14px #b3b3b3;
 }
 
+.btn-upgrades {
+  height: 250px;
+  box-shadow: 0px 0px 10px #b3b3b3;
+}
+
+.btn-upgrades:hover {
+  cursor: pointer;
+  box-shadow: 0px 0px 17px #8f8f8f;
+}
+
+.currentproduct {
+  font-size: 15px;
+  color: white;
+  padding: 1.25rem 1.25rem;
+  margin-bottom: 0;
+  background-color: rgb(144, 143, 149);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.upgradeproduct {
+  font-size: 15px;
+  color: white;
+  padding: 1.25rem 1.25rem;
+  margin-bottom: 0;
+  background-color: rgb(64, 184, 104);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.upgradesubheader {
+  font-weight: 300;
+  font-size: 26px;
+  margin-top: -10px;
+  margin-bottom: 0px;
+}
+
 .btnFinIcon {
   margin-top: 18px;
   height: 60px;
@@ -345,6 +429,12 @@ p {
 
 .bottomtext {
   font-weight: 500;
+  color: rgb(135, 136, 137);
+}
+
+.bottomtextsmall {
+  font-weight: 500;
+  font-size: 14px;
   color: rgb(135, 136, 137);
 }
 
@@ -531,17 +621,6 @@ th {
 
 .subsetsubheader {
   color: rgb(89, 92, 95);
-}
-
-.lightblue-border {
-  margin-left: auto;
-  margin-right: auto;
-  background-color: rgb(244, 252, 255);
-  max-width: 1000px;
-  padding-top: 10px;
-  padding-left: 36px;
-  padding-right: 36px;
-  border: 1.5px solid rgb(230, 239, 241);
 }
 
 .completed {
