--- a/src/index.css
+++ b/src/index.css
@@ -381,12 +381,12 @@ p {
 
 .btn-upgrades {
   height: 250px;
-  box-shadow: 0px 0px 10px #b3b3b3;
+  box-shadow: 0px 6px 6px #b3b3b3ab;
 }
 
 .btn-upgrades:hover {
   cursor: pointer;
-  box-shadow: 0px 0px 17px #8f8f8f;
+  box-shadow: 0px 3px 12px #8f8f8f;
 }
 
 .currentproduct {
@@ -566,6 +566,10 @@ th {
   line-height: 30px;
 }
 
+.bold {
+  font-weight: 500;
+}
+
 .disclaimer {
   font-size: 13.5px;
 }
@@ -602,6 +606,15 @@ th {
   font-size: 14px;
   font-weight: 400;
   color: rgb(120, 120, 120);
+}
+
+.greentext {
+  color: rgb(109, 182, 133);
+}
+
+.beegbeegpadding {
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 .greytext {
