--- a/src/index.css
+++ b/src/index.css
@@ -658,3 +658,58 @@ th {
   font-weight: 500;
   color: rgb(74, 91, 97);
 }
+
+.bubble {
+  height: 400px;
+}
+
+.strdbubble {
+  height: 375px;
+  width: 90%;
+  border-radius: 10px 10px 0px 0px;
+  display: inline-block;
+  background-color: rgb(11, 182, 199);
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.itembubble {
+  height: 220px;
+  width: 90%;
+  border-radius: 10px 10px 0px 0px;
+  display: inline-block;
+  background-color: rgb(0, 125, 144);
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.bubble-text {
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.deduction-type {
+  font-size: 24px;
+}
+
+.linebreak {
+  height: 1px;
+  width: 250px;
+  background-color: rgb(255, 255, 255);
+}
+
+.italicsmall {
+  font-style: italic;
+  font-size: 15px;
+}
